[project]
name = "fuel-check"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorlog>=6.10.1",
    "dotenv>=0.9.9",
    "fastapi-limiter>=0.2.0",
    "fastapi-utils>=0.8.0",
    "fastapi[standard]>=0.129.0",
    "ipython>=9.10.0",
    "passlib>=1.7.4",
    "pydantic[email]>=2.12.5",
    "pyjwt>=2.11.0",
    "pymongo>=4.16.0",
    "rich>=14.3.2",
    "uuid>=1.30",
]
